src/objects/Journal_Voucher_Detail__c.object
<CustomObject>
    <description>Used to capture an aggregation of item records pulled onto the Journal Voucher .pdf and interface file</description>
    <fields>
        <fullName>AFRS_Transaction_Code__c</fullName>
        <label>AFRS Transaction Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <description>Accounting code concat</description>
        <formula>Fund__c 
&amp; &apos;-&apos; &amp; IF(ISBLANK(Major_Group__c) , &apos;xx&apos;, Major_Group__c)   
&amp; &apos;-&apos; &amp; IF(ISBLANK(Major_Source__c) , &apos;xx&apos;, Major_Source__c)  
&amp; &apos;-&apos; &amp; IF(ISBLANK(Sub_Source__c) , &apos;xxxxxx&apos;, Sub_Source__c)  
&amp; IF( Send_GL__c , &apos;-&apos; &amp; General_Ledger_Account__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounting Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_to_Interface__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to Interface</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_to_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debit_Credit__c</fullName>
        <label>Debit Credit</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Ledger_Account__c</fullName>
        <label>General Ledger Account</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_record_IDs__c</fullName>
        <description>To store item record IDs when several item records are merged to single JVD record</description>
        <label>Item record IDs</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JournalVoucher__c</fullName>
        <label>Journal Voucher</label>
        <referenceTo>Journal_Voucher__c</referenceTo>
        <relationshipLabel>Journal Voucher Details</relationshipLabel>
        <relationshipName>Journal_Voucher_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JournalVoucher__c</fullName>
        <label>Journal Voucher</label>
        <referenceTo>Journal_Voucher__c</referenceTo>
        <relationshipLabel>Journal Voucher Details</relationshipLabel>
        <relationshipName>Journal_Voucher_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Journal_Voucher_Detail_Grouping__c</fullName>
        <formula>Transaction_Code__c &amp; &quot;-&quot; &amp;
IF(ISBLANK(Reversal__c), &quot;&quot;, Reversal__c &amp; &quot;-&quot;) &amp;
Agency__c &amp; &quot;-&quot; &amp;
Fund__c &amp; &quot;-&quot; &amp;
Program_Index__c &amp; &quot;-&quot; &amp;
IF(ISBLANK(Major_Group__c), &quot;&quot;, Major_Group__c &amp; &quot;-&quot;) &amp;
IF(ISBLANK(Major_Source__c), &quot;&quot;, Major_Source__c &amp; &quot;-&quot;) &amp;
IF(ISBLANK(Sub_Source__c), &quot;&quot;, Sub_Source__c &amp; &quot;-&quot;) &amp;
Debit_Credit__c &amp;
IF(ISBLANK(General_Ledger_Account__c), &quot;&quot;, &quot;-&quot; &amp; General_Ledger_Account__c)</formula>
        <label>Journal Voucher Detail Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Group__c</fullName>
        <label>Major Group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Source__c</fullName>
        <label>Major Source</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
		<fullName>Net_Amount__c</fullName>
        <description>Absolute value</description>
        <formula>IF( Debit_Credit__c = &quot;DR&quot;, 1, -1) *  Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
	<fields>
        <fullName>Program_Index__c</fullName>
        <label>Program Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Document_Suffix__c</fullName>
        <label>Reference Document Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
        <fields>
        <fullName>Refund_Amount__c</fullName>
        <description>Refund Formula Field</description>
        <formula>IF( ISPICKVAL(JournalVoucher__r.Document_Title__c, &apos;Refund JV&apos;),  Amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reversal__c</fullName>
        <label>Reversal</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_GL__c</fullName>
        <formula>IF( 
  IF( 
    Debit_Credit__c = &quot;CR&quot;,  
    CASE(AFRS_Transaction_Code__c &amp; Reversal__c, 
      &quot;049&quot;,1,&quot;071&quot;,1,&quot;074R&quot;,1,&quot;090&quot;,1,&quot;455&quot;,1,&quot;966&quot;,1, 
      0 
    ), 
    CASE(AFRS_Transaction_Code__c &amp; Reversal__c, 
      &quot;049R&quot;,1,&quot;071R&quot;,1,&quot;074&quot;,1, &quot;951&quot;,1, &quot;955&quot;,1, &quot;965&quot;,1, 
      0 
    ) 
  )=1, 
  True, 
  False
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send_GL?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Statewide_Voucher_Number__c</fullName>
        <formula>JournalVoucher__r.IAP_Receipt__r.Sender_Agency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statewide Voucher Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Source__c</fullName>
        <label>Sub Source</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsidiary_Account_Credit__c</fullName>
        <label>Subsidiary Account Credit</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsidiary_Account_Debit__c</fullName>
        <label>Subsidiary Account Debit</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Transaction_Code__c</fullName>
        <label>TMS Transaction Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Accounting_System__c</fullName>
        <label>Target Accounting System</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Accounting_Systems__c</fullName>
        <formula>IF(ISBLANK(AFRS_Transaction_Code__c),&quot;XXXX&quot;,&quot;AFRS&quot;)&amp; &quot;-&quot; &amp; IF(ISBLANK(TMS_Transaction_Code__c),&quot;XXX&quot;,&quot;TMS&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Accounting Systems</label>
        <type>Text</type>
    </fields>
        <fields>
        <fullName>Total_Received_Reports__c</fullName>
        <description>Cash Receipts</description>
        <formula>IF( ISPICKVAL( JournalVoucher__r.Document_Title__c , &apos;CRJS&apos;) ,  Amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Received Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Code__c</fullName>
        <label>Transaction Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Journal Voucher Detail</label>
    <nameField>
        <displayFormat>JVD-{0000}</displayFormat>
        <label>Journal Voucher Detail  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Voucher Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>